fixing styles - adding p-spacing for sections

--- a/wp-content/themes/architect-lj-block-editor/assets/styles/theme/twentytwentyone/assets/sass/05-blocks/button/_style.scss
+++ b/wp-content/themes/architect-lj-block-editor/assets/styles/theme/twentytwentyone/assets/sass/05-blocks/button/_style.scss
@@ -217,11 +217,14 @@ input[type="reset"],
                 ) !important;
             }
         }
+        .wp-block-button__link:focus {
+            background-color: rgba(44, 168, 94, 0.04) !important;
+        }
     }
 }
 
 .is-style-outline .wp-block-button__link[style*="radius"]:focus,
 .wp-block-button a.wp-block-button__link[style*="radius"]:focus {
-    outline-offset: 2px;
-    outline: 2px dotted var(--button--color-background);
+    // outline-offset: 2px;
+    // outline: 2px dotted var(--button--color-background);
 }
